Reg2Run Tool Changelog

2.0.2.0 (2008.12.22)

[+] Exceptions serialization
[+] Parameter '-r' now can be set either as flag or value. Flag indicates to start specified application on successful import; value will be passed as argument to starting application.

[~] Command line arguments parsing is moved to ParameterContainer.Parse()
[~] Reading parameter's value by role is moved to ParameterContainer.ReadParameter()
[~] ImportObject creation based on given parameters is moved to static ImportObject.Parse()
[~] Parameter properties Name and Description are removed from class constructor
[~] Adding and running notifications now contains full path
[~] ParameterContainer now is a Dictionary<ParameterRole, object>

[-] Removed Parameter and all inherited classes

2.0.1.0 (2008.12.13)

[+] Initial public release