@@ -6,7 +6,7 @@ using System.Globalization;
 using System.Windows.Forms;
 
 using Reg2Run.Errors;
-using Reg2Run.Parameters;
+using Reg2Run.Settings;
 
 namespace Reg2Run
 {
