@@ -5,7 +5,7 @@ using System.Globalization;
 using System.IO;
 
 using Reg2Run.Errors;
-using Reg2Run.Parameters;
+using Reg2Run.Settings;
 
 namespace Reg2Run
 {
