@@ -43,8 +43,8 @@
     <Compile Include="Core.cs" />
     <Compile Include="Errors.cs" />
     <Compile Include="ImportObject.cs" />
-    <Compile Include="Parameters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
